# lsforce

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  DISCLAIMER.md  LICENSE.md  MANIFEST.in  README.md  cleandatabase.py  code.json  compute_greens.py  deleteevent.py  environment.yml  eventanalyze.py  example.py  example_full.ipynb  example_full.py  example_triangle.ipynb  example_triangle.py  findsta.py  force_inversion.py  force_inversion_dense.py  install-cps.sh  install.sh  makefigs.py  outputdatabase.py  populatedatabase.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  stationmap.py  versioneer.py
Notebooks/: DatabaseIntro.ipynb
Notebooks/.ipynb_checkpoints/: DatabaseIntro-checkpoint.ipynb
doc/: conf.py  index.rst  requirements.txt
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/markdown/: index.md
lsforce/: __init__.py  _version.py  axisem2cps.py  force_inversion.py  lsdata.py  lsforce.py  lstrajectory.py
notebooks/: example_forward.ipynb  example_full.ipynb  example_lamplugh.ipynb  example_triangle.ipynb
tests/: test_axisem2cps.py  test_inversion.py  test_lsdata.py  test_lsforce.py  test_lstrajectory.py
tests/data/: ak135f.mod  iasp91.mod  iliamna_2016_paper_E_force.npy  iliamna_2016_paper_N_force.npy  iliamna_2016_paper_Z_force.npy  lsdata.pkl  lsforce.pkl  model_full.npy  model_triangle.npy  st_proc.pkl
tests/data/test_inversion/: model.npy
tests/data/test_lsdata/: st_in.pkl
tests/data/test_lsforce/: KALN_filtered.pkl  model_full.npy  (+1 more)
(+215 files in other folders)
