[project]
name = "lsforce"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
axisem2cps = "lsforce.axisem2cps:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
addopts = "--cov=lsforce --cov-report term --capture=no -p no:cacheprovider --mpl"
testpaths = "tests"
filterwarnings = "ignore:FigureCanvasAgg is non-interactive:UserWarning"  # Local (macOS)

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
conda_env = "lsforce"
